--- a/docs/gigapi.mdx
+++ b/docs/gigapi.mdx
@@ -26,4 +26,4 @@ Like a durable parquet floor, GigAPI provides rock-solid data foundation for you
 * Extensible: Built-In Query Engine _(DuckDB)_ or DIY _(ClickHouse, Datafusion, etc)_
 
 ### Early Access
-GigAPI is developed in public. You can test and explore [https://github.com/gigapi](GigAPI alpha releases on github)
+GigAPI is developed in public. You can test and explore <a href="https://github.com/gigapi">GigAPI alpha releases on github</a>
