--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -52,7 +52,7 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         💡 Gigapipe supports Traces ingestion from multiple sources
         #### 📍 Supported Protocols
         👣 **OpenTelemetry Traces**: Full support for cross-platform distributed tracing<br/>
-        👣 **Jaeger**: Popular open-source distributed tracing system for microservices<br/>
+        👣 **Zipkin**: Popular format using Zipkin v2 JSON<br/>
 
         #### 📍 Supported Agents
         📦 [OpenTelemetry Collector](https://opentelemetry.io/docs/collector/)<br/>
