--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -7,6 +7,8 @@ import SmoothIframe from '../../src/components/SmoothIframe'
 
 # 🏁 Get Started with Gigapipe Open-Source
 
+Gigapipe is a lightweight, multi-standard observability OSS stack that consolidates logs, metrics, traces, and profiling data into a unified storage and query system. The system implements native opentelemetry compatibility alongside popular observability standards including Loki/LogQL, Prometheus/PromQL, Tempo/TraceQL and Pyroscope, while maintaining vendor neutrality and data sovereignty.
+
 Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘️
 
 <br/>
