--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -39,3 +39,15 @@ Not a fan of Grafana? Prefer something ligther and faster to troubleshoot? Enter
             <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
             </Tab>
 </Tabs>
+
+### 👁️‍🗨️ Perses
+[Perses](https://perses.dev) is an open dashboard tool for Prometheus, Tempo and other data sources.
+
+<Tabs>
+            <Tab label="Perses">
+            ⭐ Explore Gigapipe Metrics and Traces using Perses. [Example](https://github.com/gigapipehq/gigapipe-perses-demo)<br/>
+            <img src="https://perses.dev/assets/images/perses_overview.gif" width="100%" />
+            </Tab>
+</Tabs>
+
+
