--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -41,11 +41,11 @@ Not a fan of Grafana? Prefer something ligther and faster to troubleshoot? Enter
 </Tabs>
 
 ### 👁️‍🗨️ Perses
-[Perses](https://perses.dev) is an open dashboard tool for Prometheus, Tempo and other data sources.
+[Perses](https://perses.dev) is an open dashboard tool for Metrics and Traces drop-in compatible with Gigapipe
 
 <Tabs>
             <Tab label="Perses">
-            ⭐ Explore Gigapipe Metrics and Traces using Perses. [Example](https://github.com/gigapipehq/gigapipe-perses-demo)<br/>
+            ⭐ Explore Gigapipe Metrics and Traces using Perses. [Click here for an Example](https://github.com/gigapipehq/gigapipe-perses-demo)<br/>
             <img src="https://perses.dev/assets/images/perses_overview.gif" width="100%" />
             </Tab>
 </Tabs>
