--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -15,12 +15,12 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         🪵 **Syslog**: Standard protocol for Unix-based systems and network devices<br/>
 
         #### 📍 Supported Agents
-        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width=50></a>
-        <a href="https://www.fluentd.org"><img src="https://icon2.cleanpng.com/20180529/vzb/avpchr8pf.webp" width=50></a>
-        <a href="https://www.elastic.co/beats/filebeat"><img src="https://cdn.worldvectorlogo.com/logos/elastic-beats.svg" width=50></a>
-        <a href="https://vector.dev/"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width=50></a>
-        <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width=50></a>
-        <a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width=50></a>
+        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width=50 /></a>
+        <a href="https://www.fluentd.org"><img src="https://icon2.cleanpng.com/20180529/vzb/avpchr8pf.webp" width=50 /></a>
+        <a href="https://www.elastic.co/beats/filebeat"><img src="https://cdn.worldvectorlogo.com/logos/elastic-beats.svg" width=50 /></a>
+        <a href="https://vector.dev/"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width=50 /></a>
+        <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width=50 /></a>
+        <a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width=50 /></a>
 
         📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
         📦 [Fluentd / Fluent Bit](https://www.fluentd.org/)<br/>
