--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -15,7 +15,7 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         🪵 **Syslog**: Standard protocol for Unix-based systems and network devices<br/>
 
         #### 📍 Supported Agents
-        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="50"/></a><a href="https://vector.dev/"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width="50"/></a><a href="https://www.fluentd.org"><img src="https://docs.fluentd.org/~gitbook/image?url=https%3A%2F%2F1982584918-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-LR7OsqPORtP86IQxs6E%252F-LkRmVyw0vEoFO0R2Z5g%252F-LkRmp4WbQZuDY3u9V4S%252FFluentd_icon.png%3Fgeneration%3D1563851183854365%26alt%3Dmedia&width=300&dpr=4&quality=100&sign=b531ce8&sv=2" width="50"/></a><a href="https://www.elastic.co/beats/filebeat"><img src="https://cdn.worldvectorlogo.com/logos/elastic-beats.svg" width="50"/></a><a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="50"/></a><a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width="50"/></a>
+        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="50"/></a><a href="https://vector.dev"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width="50"/></a><a href="https://www.fluentd.org"><img src="https://docs.fluentd.org/~gitbook/image?url=https%3A%2F%2F1982584918-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-LR7OsqPORtP86IQxs6E%252F-LkRmVyw0vEoFO0R2Z5g%252F-LkRmp4WbQZuDY3u9V4S%252FFluentd_icon.png%3Fgeneration%3D1563851183854365%26alt%3Dmedia&width=300&dpr=4&quality=100&sign=b531ce8&sv=2" width="50"/></a><a href="https://www.elastic.co/beats/filebeat"><img src="https://cdn.worldvectorlogo.com/logos/elastic-beats.svg" width="50"/></a><a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="50"/></a><a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width="50"/></a>
 
         #### 📍 [APIs](/docs/api)
         - **HTTP/REST API**: For sending logs via HTTP endpoints in JSON or other structured formats<br/>
