--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -16,12 +16,13 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
 
         #### 📍 Supported Agents
         <div class="my-4 flex flex-row justify-start">
-        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="50"/></a>
+        <a href="https://opentelemetry.io/docs/collector/"><img src="https://images.seeklogo.com/logo-png/43/2/opentelemetry-logo-png_seeklogo-430977.png" width="50"/></a>
+        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="45"/></a>
         <a href="https://vector.dev"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width="50"/></a>
-        <a href="https://www.fluentd.org"><img src="https://docs.fluentd.org/~gitbook/image?url=https%3A%2F%2F1982584918-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-LR7OsqPORtP86IQxs6E%252F-LkRmVyw0vEoFO0R2Z5g%252F-LkRmp4WbQZuDY3u9V4S%252FFluentd_icon.png%3Fgeneration%3D1563851183854365%26alt%3Dmedia&width=300&dpr=4&quality=100&sign=b531ce8&sv=2" width="50"/></a>
+        <a href="https://www.fluentd.org"><img src="https://docs.fluentd.org/~gitbook/image?url=https%3A%2F%2F1982584918-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-LR7OsqPORtP86IQxs6E%252F-LkRmVyw0vEoFO0R2Z5g%252F-LkRmp4WbQZuDY3u9V4S%252FFluentd_icon.png%3Fgeneration%3D1563851183854365%26alt%3Dmedia&width=300&dpr=4&quality=100&sign=b531ce8&sv=2" width="45"/></a>
         <a href="https://www.elastic.co/beats/filebeat"><img src="https://cdn.worldvectorlogo.com/logos/elastic-beats.svg" width="50"/></a>
-        <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="50"/></a>
-        <a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width="50"/></a>
+        <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="45"/></a>
+        <a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width="45"/></a>
         </div>
 
         #### 📍 [APIs](/docs/api)
@@ -38,11 +39,14 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         🌡️ **InfluxDB Line Protocol**: Enables ingestion from InfluxDB-compatible sources<br/>
 
         #### 📍 Supported Agents
-        📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
-        📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/)<br/>
-        📦 [Prometheus Node Exporter](https://prometheus.io/docs/guides/node-exporter/)<br/>
-        📦 [Vector](https://vector.dev/)<br/>
-        📦 [Amazon CloudWatch Agent](https://aws.amazon.com/cloudwatch/)<br/>
+        <div class="my-4 flex flex-row justify-start">
+        <a href="https://opentelemetry.io/docs/collector/"><img src="https://images.seeklogo.com/logo-png/43/2/opentelemetry-logo-png_seeklogo-430977.png" width="50"/></a>
+        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="45"/></a>
+        <a href="https://www.influxdata.com/time-series-platform/telegraf/"><img src="https://static-00.iconduck.com/assets.00/influxdb-icon-2017x2048-38lz5101.png" width="45"/></a>
+        <a href="https://prometheus.io/docs/guides/node-exporter/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Prometheus_software_logo.svg/1200px-Prometheus_software_logo.svg.png" width="45"/></a>
+        <a href="https://vector.dev"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width="50"/></a>
+        <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="45"/></a>
+        </div>
 
         #### 📍 [APIs](/docs/api)
         - **Prometheus PushGateway**: Used for pushing ephemeral metrics to Gigapipe<br/>
@@ -57,9 +61,11 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         👣 **Zipkin**: Popular format using Zipkin v2 JSON<br/>
 
         #### 📍 Supported Agents
-        📦 [OpenTelemetry Collector](https://opentelemetry.io/docs/collector/)<br/>
-        📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/)<br/>
-        📦 [Jaeger Agent](https://www.jaegertracing.io/)<br/>
+        <div class="my-4 flex flex-row justify-start">
+        <a href="https://opentelemetry.io/docs/collector/"><img src="https://images.seeklogo.com/logo-png/43/2/opentelemetry-logo-png_seeklogo-430977.png" width="50"/></a>
+        <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="45"/></a>
+        <a href="https://www.jaegertracing.io"><img src="https://i.imgur.com/tNdT6FY.png" width="45"/></a>
+        </div>
 
         #### 📍 [APIs](/docs/api)
         - **Jaeger Thrift**: Supports trace ingestion in Jaeger's Thrift format<br/>
@@ -73,6 +79,11 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
         🔍 **OpenTelemetry Profiling**: Standardized profiling format to track application resource use<br/>
 
         #### 📍 Supported Agents
+        <div class="my-4 flex flex-row justify-start">
+        <a href="https://opentelemetry.io/docs/collector/"><img src="https://images.seeklogo.com/logo-png/43/2/opentelemetry-logo-png_seeklogo-430977.png" width="50"/></a>
+        <a href="https://pyroscope.io"><img src="https://pyroscope.io/img/logo-v3-small.png" width="50"/></a>
+        </div>
+
         📦 [Grafana Agent](https://grafana.com/docs/agent/latest/)<br/>
         📦 [Pyroscope Agent](https://pyroscope.io/)<br/>
         📦 [Parca Agent](https://www.parca.dev/)<br/>
