--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -186,6 +186,14 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
               <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="45"/></a>
               <a href="https://grafana.com/docs/loki/latest/send-data/promtail/"><img src="https://artifacthub.io/image/c3c27bcf-e74a-416f-85bb-111ccf93966e@3x" width="45"/></a>
             </div>
+
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
+            📦 [Vector](https://vector.dev/) <br/>
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector) <br/>
+            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/) <br/>
+            📦 [Fluentd](https://www.fluentd.org/) <br/>
+            📦 [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)<br/>
             
             </Tab>
             <Tab label="Metrics">
@@ -198,6 +206,11 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
               <a href="https://vector.dev"><img src="https://avatars.githubusercontent.com/u/16866914?s=280&v=4" width="50"/></a>
               <a href="https://aws.amazon.com/cloudwatch"><img src="https://static-00.iconduck.com/assets.00/aws-cloudwatch-icon-1810x2048-iij4ep90.png" width="45"/></a>
             </div>
+
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
+            📦 [Vector](https://vector.dev/) <br/>
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
             
             </Tab>
             <Tab label="Traces">
@@ -207,6 +220,11 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
               <a href="https://grafana.com/docs/alloy/latest"><img src="https://grafana.com/media/docs/alloy/alloy_icon.png" width="45"/></a>
               <a href="https://www.jaegertracing.io"><img src="https://i.imgur.com/tNdT6FY.png" width="45"/></a>
             </div>
+
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
+            📦 [Zipkin](https://zipkin.io/) <br/>
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
    
             </Tab>
             <Tab label="Profiles">
@@ -215,6 +233,9 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
               <a href="https://opentelemetry.io/docs/collector/"><img src="https://images.seeklogo.com/logo-png/43/2/opentelemetry-logo-png_seeklogo-430977.png" width="50"/></a>
               <a href="https://pyroscope.io"><img src="https://pyroscope.io/img/logo-v3-small.png" width="50"/></a>
             </div>
+
+            📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) <br/>
 
             </Tab>
             <Tab label="Opentelemetry">
