--- a/docs/docs/config.mdx
+++ b/docs/docs/config.mdx
@@ -50,4 +50,5 @@ The following `ENV` parameters can be used to control **gigapipe** parameters an
 | BULK_MAX_AGE_MS | 100  | max age of the bulk in milliseconds. Minimum value 100ms |
 | MODE | all  | `all`, `writer`, `reader`, `init_only` _(init db and exit)_ |
 | SELF_SIGNED_CERT | false | Allow self-signed certificates |
+| LOG_DRILLDOWN | false | Enable Drill-Down features for Logs |
 
